<resources>
    <string name="app_name">Lab3</string>
    <string name="Username">Username:</string>
    <string name="Password">Password:</string>
    <string name="Login">Login</string>
    <string name="Remember">Remember me</string>
    <string name="Guest_option">Sign in as guest</string>
    <string name="Pathfinding">Pathfinding</string>
    <string name="Profile">Profile</string>
    <string name="FAQ">FAQ</string>
    <string name="MAP_LV1">Map</string>
    <string name="main">Main menu</string>
    <string name="parking_map">utsa with parking</string>
    <string name="todo">TODO</string>
    <string name="Full_Name">Full Name</string>
    <string name="Email">Email\n</string>
    <string name="Back">Back</string>
    <string name="Sign_up">Sign up</string>
    <string name="accreg">Account Registration</string>
    <string name="Reginstruc">Please fill in all data below</string>
    <string name="name">Name:</string>
    <string name="Password_">Password:</string>
    <string name="email">Email:</string>
    <string name="name_">Name</string>
    <string name="Register">Register</string>
</resources>