<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Pathfinding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pathfinding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Pathfinding"
        tools:text="@string/Profile" />

    <Button
        android:id="@+id/FAQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FAQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Map"
        app:layout_constraintStart_toEndOf="@+id/Profile"
        tools:text="@string/FAQ" />

    <Button
        android:id="@+id/Map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MAP_LV1"
        app:layout_constraintBottom_toBottomOf="@+id/FAQ"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/MAP_LV1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/parking_map"
        android:contextClickable="false"
        android:rotation="90"
        android:scaleX="1.6"
        android:scaleY="1.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map"
        android:src="@drawable/map"
        />

    <TextView
        android:id="@+id/Main"
        android:layout_width="111dp"
        android:layout_height="33dp"
        android:text="@string/main"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>