<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="417dp"
        android:layout_height="128dp"
        android:layout_marginTop="12dp"
        android:text="@string/accreg"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="47dp"
        android:layout_marginTop="15dp"
        android:text="@string/Reginstruc"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Usname_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/username_r"
        app:layout_constraintTop_toTopOf="@+id/username_r"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/username_r"
        android:layout_width="114dp"
        android:layout_height="33dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:text="@string/Username"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/Usname_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/password_r"
        android:layout_width="114dp"
        android:layout_height="33dp"
        android:layout_marginTop="45dp"
        android:text="@string/Password_"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/username_r"
        app:layout_constraintTop_toBottomOf="@+id/username_r"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Upass_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Usname_input"
        app:layout_constraintTop_toTopOf="@+id/password_r"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Name_text"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:text="@string/name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/password_r"
        app:layout_constraintTop_toBottomOf="@+id/password_r"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/UName_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Upass_input"
        app:layout_constraintTop_toTopOf="@+id/Name_text"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/REmail"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="45dp"
        android:text="@string/email"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/Name_text"
        app:layout_constraintTop_toBottomOf="@+id/Name_text"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/Uemail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/UName_input"
        app:layout_constraintTop_toTopOf="@+id/REmail"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/submit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Uemail_input"
        app:layout_constraintVertical_bias="0.408" />

</androidx.constraintlayout.widget.ConstraintLayout>