<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#209BA6">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/utsa_wordmark_white" />

    <TextView
        android:id="@+id/F_N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/Full_Name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/Emai"
        android:layout_width="74dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/F_N"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/F_N_edit"
        android:layout_width="129dp"
        android:layout_height="36dp"
        android:text="@string/Full_Name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/F_N"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/F_N"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/Email_edit"
        android:layout_width="129dp"
        android:layout_height="36dp"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/Emai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Emai"
        app:layout_constraintTop_toTopOf="@+id/Emai"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>