<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Username"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="361dp"
        android:layout_height="32dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Password"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/user_pass"
        app:layout_constraintStart_toStartOf="@+id/user_pass" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#0F4EED"
        android:text="@string/Logjn"
        app:iconTint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Remember_me"
        tools:text="@string/Logjn" />

    <Button
        android:id="@+id/Guest_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#027A05"
        android:text="@string/Guest_option"
        app:iconTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        tools:text="@string/Guest_option" />

    <EditText
        android:id="@+id/user_pass"
        android:layout_width="361dp"
        android:layout_height="32dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="356dp"
        android:layout_height="176dp"
        android:layout_marginTop="16dp"
        android:background="#0C2340"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/utsa_wordmark_white" />

    <CheckBox
        android:id="@+id/Remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/Remember"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_pass"
        tools:text="@string/Remember" />
</androidx.constraintlayout.widget.ConstraintLayout>